--- a/package.json
+++ b/package.json
@@ -56,6 +56,7 @@
     "@types/react-test-renderer": "^16.9.0",
     "@types/uuid": "^3.4.5",
     "babel-jest": "24.9.0",
+    "babel-plugin-module-resolver": "^4.1.0",
     "eslint": "6.3.0",
     "jest": "24.9.0",
     "metro-react-native-babel-preset": "0.54.1",
