Add debuging tool and fix small styling issues

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -11,21 +11,21 @@
     "noEmit": true,
     "strict": true,
     "target": "esnext",
-    "baseUrl": "./app",
+    "baseUrl": ".",
     "paths": {
-      "@assets/*": ["assets/*"],
-      "@components/*": ["components/*"],
-      "@components": ["components"],
-      "@containers/*": ["containers/*"],
-      "@db": ["db"],
-      "@db/*": ["db/*"],
-      "@languages/*": ["languages/*"],
-      "@navigation/*": ["navigation/*"],
-      "@styles/*": ["styles/*"],
-      "@services": ["services"],
-      "@services/*": ["services/*"],
-      "@utils": ["utils"],
-      "@utils/*": ["utils/*"],
+      "@assets/*": ["./app/assets/*"],
+      "@components/*": ["./app/components/*"],
+      "@components": ["./app/components"],
+      "@containers/*": ["./app/containers/*"],
+      "@db": ["./app/db"],
+      "@db/*": ["./app/db/*"],
+      "@languages/*": ["./app/languages/*"],
+      "@navigation/*": ["./app/navigation/*"],
+      "@styles/*": ["./app/styles/*"],
+      "@services": ["./app/services"],
+      "@services/*": ["./app/services/*"],
+      "@utils": ["./app/utils"],
+      "@utils/*": ["./app/utils/*"],
     }
   },
   "exclude": [
