Fix bug with babel-module-resolver

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -8,25 +8,29 @@
     "lib": ["es6"],
     "moduleResolution": "node",
     "resolveJsonModule": true,
+    "baseUrl": "./app/",
+    "paths": {
+      "@assets/*": ["assets/*"],
+      "@components/*": ["components/*"],
+      "@components": ["components"],
+      "@containers/*": ["containers/*"],
+      "@containers": ["containers"],
+      "@db/*": ["db/*"],
+      "@db": ["db"],
+      "@languages/*": ["languages/*"],
+      "@languages": ["languages"],
+      "@navigation/*": ["navigation/*"],
+      "@navigation": ["navigation"],
+      "@styles/*": ["styles/*"],
+      "@styles": ["styles"],
+      "@services/*": ["services/*"],
+      "@services": ["services"],
+      "@utils/*": ["utils/*"],
+      "@utils": ["utils"],
+    },
     "noEmit": true,
     "strict": true,
     "target": "esnext",
-    "baseUrl": ".",
-    "paths": {
-      "@assets/*": ["./app/assets/*"],
-      "@components/*": ["./app/components/*"],
-      "@components": ["./app/components"],
-      "@containers/*": ["./app/containers/*"],
-      "@db": ["./app/db"],
-      "@db/*": ["./app/db/*"],
-      "@languages/*": ["./app/languages/*"],
-      "@navigation/*": ["./app/navigation/*"],
-      "@styles/*": ["./app/styles/*"],
-      "@services": ["./app/services"],
-      "@services/*": ["./app/services/*"],
-      "@utils": ["./app/utils"],
-      "@utils/*": ["./app/utils/*"],
-    }
   },
   "exclude": [
     "node_modules",
